tests/Rules/Ui/Fixtures/invalid/outline_none_no_focus_visible.html.twig
{# 1 errors #}
<button style="outline: none">Bouton sans focus visible</button>
